--- a/bower.json
+++ b/bower.json
@@ -1,16 +1,17 @@
 {
-  "name": "me",
+  "name": "hendrixer.github.io",
   "version": "0.0.0",
-  "dependencies": {
-    "angular": "1.2.6",
-    "json3": "~3.2.6",
-    "es5-shim": "~2.1.0",
-    "jquery": "~1.10.2",
-    "bootstrap": "~3.0.3",
-    "angular-route": "1.2.6"
-  },
-  "devDependencies": {
-    "angular-mocks": "1.2.6",
-    "angular-scenario": "1.2.6"
-  }
+  "homepage": "https://github.com/Hendrixer/hendrixer.github.io",
+  "authors": [
+    "Hendrixer <willscottmoss@gmail.com>"
+  ],
+  "license": "MIT",
+  "private": true,
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ]
 }
