--- a/bower.json
+++ b/bower.json
@@ -13,5 +13,10 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "angular": "~1.2.8",
+    "angular-route": "~1.2.8",
+    "bootstrap-css-only": "~3.0.0"
+  }
 }
