--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,10 @@
   "dependencies": {
     "angular": "~1.2.8",
     "angular-route": "~1.2.8",
-    "bootstrap-css-only": "~3.0.0"
+    "bootstrap-css-only": "~3.0.0",
+    "angular-animate": "~1.2.9"
+  },
+  "resolutions": {
+    "angular": "1.2.8"
   }
 }
