--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "angular": "~1.2.8",
     "angular-route": "~1.2.8",
     "bootstrap-css-only": "~3.0.0",
-    "angular-animate": "~1.2.9"
+    "angular-animate": "~1.2.9",
+    "angular-ui-router": "~0.2.10"
   },
   "resolutions": {
     "angular": "1.2.8"
