(update) bower.json

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "hendrixer.github.io",
+  "name": "ng-home-Google-Now",
   "version": "0.0.0",
-  "homepage": "https://github.com/Hendrixer/hendrixer.github.io",
+  "homepage": "https://github.com/Hendrixer/ng-home-Google-Now",
   "authors": [
     "Hendrixer <willscottmoss@gmail.com>"
   ],
