--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "gulp": "^3.6.0",
     "connect-livereload": "^0.3.2",
     "tiny-lr": "0.0.5",
-    "gulp-livereload": "^1.2.0"
+    "gulp-livereload": "^1.2.0",
+    "gulp-mocha": "^0.4.1",
+    "expect.js": "^0.3.1",
+    "supertest": "^0.10.0"
   }
 }
