--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "type": "git",
     "url": "https://github.com/Hendrixer/ng-home-Google-Now.git"
   },
+  "engines": {
+    "node": "0.10.x"
+  },
   "keywords": [
     "node",
     "angular",
