--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "home",
   "main": "index.js",
   "scripts": {
-    "test": "gulp test"
+    "test": "gulp test",
+    "postinstall": "./node_modules/bower/bin/bower install"
   },
   "repository": {
     "type": "git",
@@ -29,7 +30,8 @@
     "mongoose": "^3.8.8",
     "twit": "^1.1.12",
     "socket.io": "^0.9.16",
-    "q": "^1.0.1"
+    "q": "^1.0.1",
+    "bower": "^1.3.1"
   },
   "devDependencies": {
     "gulp": "^3.6.0",
