--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "twit": "^1.1.12",
     "socket.io": "^0.9.16",
     "q": "^1.0.1",
-    "bower": "^1.3.1"
+    "bower": "git://github.com/neoziro/bower.git#v1.2.8-patched"
   },
   "devDependencies": {
     "gulp": "^3.6.0",
