--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,7 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.2.8",
+    "angular": "1.2.9",
     "bootstrap-css-only": "~3.0.0",
     "angular-animate": "~1.2.9",
     "angular-ui-router": "~0.2.10",
