--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "twit": "^1.1.12",
     "socket.io": "^0.9.16",
     "q": "^1.0.1",
-    "bower": "1.3.x"
+    "bower": "1.3.x",
+    "stylus": "^0.42.3"
   },
   "devDependencies": {
     "gulp": "^3.6.0",
@@ -40,6 +41,7 @@
     "gulp-livereload": "^1.2.0",
     "gulp-mocha": "^0.4.1",
     "expect.js": "^0.3.1",
-    "supertest": "^0.10.0"
+    "supertest": "^0.10.0",
+    "gulp-stylus": "^0.1.0"
   }
 }
