--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "scripts": {
     "test": "gulp test",
-    "prepublish": "/node_modules/gulp/bin/gulp.js stylus",
     "postinstall": "./node_modules/bower/bin/bower install"
   },
   "repository": {
@@ -33,7 +32,9 @@
     "socket.io": "^0.9.16",
     "q": "^1.0.1",
     "bower": "1.3.x",
-    "stylus": "^0.42.3"
+    "stylus": "^0.42.3",
+    "nodemon": "^1.0.17",
+    "gulp-nodemon": "^1.0.2"
   },
   "devDependencies": {
     "gulp": "^3.6.0",
@@ -43,6 +44,7 @@
     "gulp-mocha": "^0.4.1",
     "expect.js": "^0.3.1",
     "supertest": "^0.10.0",
-    "gulp-stylus": "^0.1.0"
+    "gulp-stylus": "^0.1.0",
+    "gulp-notify": "^1.2.5"
   }
 }
