--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "gulp test",
-    "postinstall": "./node_modules/bower/bin/bower install"
+    "postinstall": "bower install"
   },
   "repository": {
     "type": "git",
@@ -46,6 +46,9 @@
     "supertest": "^0.10.0",
     "gulp-stylus": "^0.1.0",
     "gulp-notify": "^1.2.5",
-    "gulp-spawn-mocha": "^0.1.3"
+    "gulp-spawn-mocha": "^0.1.3",
+    "gulp-concat": "^2.2.0",
+    "gulp-plumber": "^0.5.6",
+    "gulp-jshint": "^1.5.2"
   }
 }
